fixing nav menu

--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -38,7 +38,7 @@
           id="navbar-example2"
           data-bs-dismiss="offcanvas"
         >
-          <!- - - ->{% for i in nav_core %}<!- - - ->
+          <!- - - ->{% for i in nav_menu %}<!- - - ->
           <a class="nav-link" href="{{i.link}}">{{i.name}}</a>
           <!- - - ->{% endfor %}<!- - - ->
         </div>
