--- a/templates/pages/contact/form/index.html
+++ b/templates/pages/contact/form/index.html
@@ -13,16 +13,20 @@
 
 <div class="container-fluid" style="padding-top: 70px">
   <div class="shadow-sm p-2 mb-3 bg-body-tertiary rounded">
-    <div class="fs-1 text-center" style="min-height: 60px">{{ person_id }}</div>
+    <div class="fs-1 text-center" style="min-height: 60px">
+      <!- -  - ->{% if bio.field.name.value %} {{ bio.field.name.value }}
+      <!- -  - ->{% else %} New Contact
+      <!- -  - ->{% endif %}
+    </div>
   </div>
 
   <div class="row g-3">
     <div class="col-xl-6">
       <div
-        class="shadow-sm pt-3 px-3 bg-body-tertiary rounded"
-        style="min-height: 732px"
+        class="shadow-sm py-4 px-3 bg-body-tertiary rounded"
+        style="min-height: 759.167px"
       >
-        {% include "pages/person/new_form/utils/bio.html" %}
+        {% include "pages/contact/form/utils/bio.html" %}
       </div>
     </div>
 
@@ -31,18 +35,18 @@
         <div class="col-12">
           <div
             class="shadow-sm p-3 bg-body-tertiary rounded"
-            style="min-height: 358px"
+            style="min-height: 371.5px"
           >
-            {% include "pages/person/new_form/utils/edu.html" %}
+            {% include "pages/contact/form/utils/edu.html" %}
           </div>
         </div>
 
         <div class="col-12">
           <div
             class="shadow-sm p-3 bg-body-tertiary rounded"
-            style="min-height: 358px"
+            style="min-height: 371.5px"
           >
-            {% include "pages/person/new_form/utils/work.html" %}
+            {% include "pages/contact/form/utils/work.html" %}
           </div>
         </div>
       </div>
@@ -51,14 +55,14 @@
 
   <div class="mt-3">
     <div class="shadow-sm py-3 bg-body-tertiary rounded text-center">
-      {% include "pages/person/new_form/utils/btn_control.html" %}
+      {% include "pages/contact/form/utils/btn_control.html" %}
     </div>
   </div>
 </div>
 
 {% if page == "add" or page == "edit" %}
-<!- -  - ->{% include "pages/person/new_form/utils/modal_add_edu.html" %}<!- -  - ->
-<!- -  - ->{% include "pages/person/new_form/utils/modal_add_work.html" %}<!- -  - ->
+<!- -  - ->{% include "pages/contact/form/utils/modal_add_edu.html" %}<!- -  - ->
+<!- -  - ->{% include "pages/contact/form/utils/modal_add_work.html" %}<!- -  - ->
 {% endif %}
 
 <!- -  - ->{% endblock apps %}<!- -  - ->
