--- a/templates/pages/contact/form/utils/edu.html
+++ b/templates/pages/contact/form/utils/edu.html
@@ -3,7 +3,7 @@
     <div class="fs-4">Education<i class="bi bi-book ms-2"></i></div>
   </div>
   <div class="col text-end">
-    {% if page == "add" or page == "edit" %}
+    {% if page == "edit" %}
     <button
       class="btn btn-secondary text-align-middle"
       type="button"
@@ -31,28 +31,23 @@
     </tr>
   </thead>
   <tbody>
-    <!- - - ->{% for i in edu %}<!- - - ->
+    <!- - - ->{% for i in edu.data %}<!- - - ->
     <tr>
-      <td class="align-middle">{{ i.education_nm }}</td>
+      <td class="align-middle">{{ i.name }}</td>
       <td class="align-middle">{{ i.major }}</td>
       <td class="text-center align-middle">{{ i.category }}</td>
       <td class="text-center align-middle">{{ i.date_in|date:"M Y" }}</td>
       <td class="text-center align-middle">{{ i.date_out|date:"M Y" }}</td>
-      {% if page == "add" or page == "edit" %}
+      {% if page == "edit" %}
       <td class="text-center align-middle">
-        <form method="post">
-          {% csrf_token %}
-          <input
-            type="text"
-            name="edu_id"
-            value="{{ forloop.counter0 }}"
-            hidden
-          />
-          <button type="submit" name="del_edu" class="btn btn-danger">
-            <i class="bi bi-trash"></i>
-          </button>
-        </form>
+        <a
+          href="{% url 'web:contact_delete_edu' bio.data.contact_id i.education_id %}"
+          class="btn btn-danger"
+          ><i class="bi bi-trash"></i
+        ></a>
       </td>
+      {% elif page == "add" %}
+      <td></td>
       {% endif %}
     </tr>
     <!- - - ->{% endfor %}<!- - - ->
