--- a/templates/pages/contact/form/utils/work.html
+++ b/templates/pages/contact/form/utils/work.html
@@ -3,7 +3,7 @@
     <div class="fs-4">Work Experience<i class="bi bi-gear ms-2"></i></div>
   </div>
   <div class="col text-end">
-    {% if page == "add" or page == "edit" %}
+    {% if page == "edit" %}
     <button
       class="btn btn-secondary text-align-middle"
       type="button"
@@ -25,23 +25,29 @@
       <th style="min-width: 150px" class="text-center">Role</th>
       <th style="min-width: 100px" class="text-center">Date In</th>
       <th style="min-width: 100px" class="text-center">Date Out</th>
-      {% if page == "add_or_edit" %}
+      {% if page == "add" or page == "edit" %}
       <th class="text-center">Action</th>
       {% endif %}
     </tr>
   </thead>
   <tbody>
-    <!- - - ->{% for i in work %}<!- - - ->
+    <!- - - ->{% for i in work.data %}<!- - - ->
     <tr>
-      <td class="align-middle">{{ i.company_nm }}</td>
+      <td class="align-middle">{{ i.name }}</td>
       <td class="align-middle">{{ i.industry }}</td>
       <td class="text-center align-middle">{{ i.role }}</td>
       <td class="text-center align-middle">{{ i.date_in|date:"M Y" }}</td>
       <td class="text-center align-middle">{{ i.date_out|date:"M Y" }}</td>
-      {% if page == "add_or_edit" %}
+      {% if page == "edit" %}
       <td class="text-center align-middle">
-        <a href="#" class="btn btn-danger"><i class="bi bi-trash"></i></a>
+        <a
+          href="{% url 'web:contact_delete_work' bio.data.contact_id i.work_experience_id %}"
+          class="btn btn-danger"
+          ><i class="bi bi-trash"></i
+        ></a>
       </td>
+      {% elif page == "add" %}
+      <td></td>
       {% endif %}
     </tr>
     <!- - - ->{% endfor %}<!- - - ->
