--- a/templates/pages/contact/index.html
+++ b/templates/pages/contact/index.html
@@ -14,6 +14,10 @@
     <div class="fs-1 text-center">Contact</div>
   </div>
   <div class="shadow-sm p-3 mb-3 bg-body-tertiary rounded">
+    <a href="{% url 'web:contact_add' %}" class="btn btn-primary mb-3 fs-5">
+      <i class="bi bi-plus-square me-2"></i>
+      <span>Add New Contact</span>
+    </a>
     <table id="contact" class="table table-striped" style="width: 100%">
       <thead>
         <tr>
@@ -60,7 +64,7 @@
 <script>
   new DataTable("#contact", {
     scrollX: true,
-    scrollY: 410,
+    scrollY: 500,
   });
 </script>
 <!- -  - ->{% endblock js %}
